Kubernetes/targeting-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-deploy
  namespace: targeting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service # < - deploy ira gerenciar container com essa label Linhas 20
  template:
    metadata:
      labels:
        app: targeting-service # < - tag do container
    spec:
      containers:
      - name: targeting-service
        image: 123945314948.dkr.ecr.us-east-1.amazonaws.com/targeting-service:f0b3477
        ports:
        - containerPort: 8003 # <- apenas indica na documentação
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8003
          initialDelaySeconds: 10
          periodSeconds: 30
