Kubernetes/targeting-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service-clusterip
  namespace: targeting-service
spec:
  selector:
    app: targeting-service
  type: ClusterIP
  ports:
  - port: 8003
    targetPort: 8003
